CHATS_SIT/force-app/main/default/objects/T_AUTH_ENCUMBR__c.object
<CustomObject>
    <fields>
        <fullName>IDN_AUTH__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Authorization ID</label>
        <referenceTo>T_AUTH__c</referenceTo>
        <relationshipLabel>T_AUTH__ENCUMBR</relationshipLabel>
        <relationshipName>T_AUTH_ENCUMBR</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>cde_status_encmbr__c</fullName>
        <label>Encumbrance Status</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetName>R00690</valueSetName>
        </valueSet>
    </fields>
    <fields>
        <fullName>cnt_hour_care__c</fullName>
        <label>Authorized Hours</label>
        <precision>4</precision>
        <scale>2</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>dte_care__c</fullName>
        <encryptionScheme>None</encryptionScheme>
        <label>Date of Care</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>ind_0_36_months__c</fullName>
        <description>CCCAP-14174</description>
        <encryptionScheme>None</encryptionScheme>
        <label>0-36 Months</label>
        <length>5</length>
        <type>Text</type>
    </fields>
    <label>Authorization Encumbrance</label>
    <nameField>
        <displayFormat>{0}</displayFormat>
        <label>Authorization Encumbrance Id</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Authorization Encumbrance</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>